--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
   <meta charset="utf-8">
   <title>Respontive Image Section</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <section>
+    <div class="text">
+      <h1>Intense Mint Dark Chocolate</h1>
+      <strong>85% Cocoa</strong>
+      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      <div>
+        <a href="#" class="btn">Buy now</a>
+      </div>
+    </div>
+    <div class="img-flex">
+      <img src="images/placeholder-4by3.svg" alt="">
+    </div>
+  </section>
 
 </body>
 </html>
