--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <section>
+  <section class="content">
     <div class="text">
       <h1>Intense Mint Dark Chocolate</h1>
       <strong>85% Cocoa</strong>
       <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
-      <div>
-        <a href="#" class="btn">Buy now</a>
-      </div>
+      <a href="#" class="btn">Buy now</a>
     </div>
-    <div class="img-flex">
-      <img src="images/placeholder-4by3.svg" alt="">
+    <div class="image">
+      <img src="images/placeholder-4by3.svg" class="img-flex" alt="">
     </div>
   </section>
-
 </body>
 </html>
